syntax = "proto3";

option csharp_namespace = "GrpcProto";

package bridge;

service Receiver {
  rpc ReceiveFrame (ReceiveRequest) returns (ReceiveResponse);
}

message ReceiveRequest {
  string name = 1;
}

message ReceiveResponse {
  string message = 1;
}

service ServerSentCommands {
  rpc GetCommands (GetCommandsRequest) returns (stream Command);
}

message Command {
  oneof command {
	  JoinTeamsMeeting joinTeamsMeeting = 1;
	  SendVideoFrame SendVideoFrame = 2;
  }
}

message JoinTeamsMeeting {
	string callToken = 1;
	string displayName = 2;
	string meetingJoinUrl = 3;
}

message SendVideoFrame {
	string displayName = 1;
	string callLocator = 2;
	string memoryMappedFileName = 3;
}

message GetCommandsRequest {

}

service Events {
  rpc HasJoined (HasJoinedRequest) returns (HasJoinedResponse);
}

message HasJoinedRequest {
  string meetingJoinUrl = 1;
  string displayName = 2;
}

message HasJoinedResponse {
}
